# tinymcp

./: .gitlab-ci.yml  MANIFEST.in  README.md  __init__.py  pyproject.toml  registry.py  requirements-dev.txt  router.py
auth_info/: oauth_integration_guide.md  sample_auth.md
docs/authentication/: oauth_integration_guide.md  sample_auth.md
docs/sample_server/: simple_fastapi_server.py  tiny_mcp_server.py
tests/: __init__.py  conftest.py  test_tinymcp.py
tinymcp/: __init__.py  router.py
